# me7540

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
Exercises/PlaneElasticity/: README.md  pyproject.toml
Exercises/PlaneElasticity/src/plane/: __main__.py  plane.py
Exercises/fem/: README.md  pyproject.toml
Exercises/fem/examples/: heat1.py  heat2.py  heat_mms.py  mpc.py  plate_with_hole.py  pressure.py  uniaxial_stress.py
Exercises/fem/src/fem/: __init__.py  block.py  builder.py  cell.py  collections.py  constants.py  element.py  material.py  mesh.py  meshing.py  model.py  plotting.py  pytools.py  simulation.py  solver.py  step.py  typing.py
Exercises/fem/src/fem/element/: __init__.py  base.py  cnd.py  dcnd.py  geom.py  isop.py
Exercises/fem/src/fem/material/: __init__.py  base.py  conduction.py  elastic.py
Exercises/fem/src/fem/meshing/: __init__.py  quad.py  tri.py
Exercises/fem/src/fem/step/: __init__.py  assemble.py  base.py  direct.py  heat_transfer.py  static.py
Exercises/fem/src/fem/trash/: builder.py
Exercises/heat2d/src/heat2d/: heat.py
