[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fem"
description = "fem: simple finite element solver"
readme = "README.md"
keywords = [ "finite elements"]
license = { "file" = "LICENSE" }
dynamic = ["version"]
authors = [
    { name = "Tim Fuller" },
]
dependencies = [
    "distmeshpy",
    "scipy",
    "numpy",
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]


[tool.ruff]
target-version = "py311"
line-length = 100

format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = "dynamic"
format.docstring-code-format = false
lint.select = [ "F", "I" ]
lint.ignore = [ "E731", "E741", "F841" ]
lint.per-file-ignores."src/_canary/plugins/*/__init__.py" = [ "F401", "F403", "F405" ]
lint.per-file-ignores."src/_canary/plugins/__init__.py" = [ "F401", "F403", "F405" ]
lint.per-file-ignores."src/_canary/third_party/*.py" = [ "F401", "F403", "F405" ]
lint.per-file-ignores."src/canary/__init__.py" = [ "F401" ]
lint.per-file-ignores."src/canary_cmake/third_party/*.py" = [ "F401", "F403", "F405" ]
lint.isort.force-single-line = true

[tool.check-wheel-contents]
# W009: Wheel contains multiple toplevel library entries
ignore = "W009"

[tool.pyproject-fmt]
indent = 4
max_supported_python = "3.14"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = "mock data generators"
addopts = "-ra --durations=10"
cache_dir = ".cache/pytest"
python_files = "*.py"
filterwarnings = [ "ignore::DeprecationWarning" ]


[tool.mypy]
exclude = [
    "src/fem/trash/"
]

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "distmeshpy.*"
ignore_missing_imports = true

[tool.ty.src]
exclude = [ ]
include = ["src", "tests"]


[tool.bandit]
skips = [
    "B101",  # ignore asserts
    "B311",  # ignore warnings about random numbers
    "B318",  # xml.dom.minidom.parse to parse XML
    "B324",  # non-cryptographic hashes allowed (they are used to generate IDs only)
    "B404",  # consider security risks when using subprocess module
    "B406",  # xml.sax.saxutils to parse XML
    "B408",  # allow use of xml parsers
    "B603",
    "B607", # start_process_with_partial_path"
]
exclude_dirs = []
